factorisation de code + commentaire